Thu Feb 24 16:07:15 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/Concurrency_Service/Makefile.am:
	* orbsvcs/CosEvent_Service/Makefile.am:
	* orbsvcs/Dump_Schedule/Makefile.am:
	* orbsvcs/Event_Service/Makefile.am:
	* orbsvcs/FTRT_Event_Service/Event_Service/Makefile.am:
	* orbsvcs/FTRT_Event_Service/Factory_Service/Makefile.am:
	* orbsvcs/FTRT_Event_Service/Gateway_Service/Makefile.am:
	* orbsvcs/FT_ReplicationManager/Makefile.am:
	* orbsvcs/Fault_Detector/Makefile.am:
	* orbsvcs/Fault_Notifier/Makefile.am:
	* orbsvcs/IFR_Service/Makefile.am:
	* orbsvcs/ImplRepo_Service/Makefile.am:
	* orbsvcs/LifeCycle_Service/Makefile.am:
	* orbsvcs/LoadBalancer/Makefile.am:
	* orbsvcs/Logging_Service/Basic_Logging_Service/Makefile.am:
	* orbsvcs/Logging_Service/Event_Logging_Service/Makefile.am:
	* orbsvcs/Logging_Service/Notify_Logging_Service/Makefile.am:
	* orbsvcs/Logging_Service/RTEvent_Logging_Service/Makefile.am:
	* orbsvcs/Naming_Service/Makefile.am:
	* orbsvcs/Notify_Service/Makefile.am:
	* orbsvcs/Scheduling_Service/Makefile.am:
	* orbsvcs/Time_Service/Makefile.am:
	* orbsvcs/Trading_Service/Makefile.am:

	  Regenerated.

Thu Feb 24 15:06:57 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* TAO_IDL/Makefile.am:
	* orbsvcs/TAO_Service/Makefile.am:
	* orbsvcs/orbsvcs/Makefile.am:
	* tao/Makefile.am:

	  Regenerated.

	* tao/tao.mpc:

	  Removed OBV_Constants.h from Header_Files section.

Thu Feb 24 12:54:54 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/PortableServer/Fixed_Size_SArgument_T.cpp:
	* tao/PortableServer/Fixed_Size_SArgument_T.h:
	* tao/PortableServer/Fixed_Size_SArgument_T.inl:

	  Fixed memory management and parameter passing problems.
	  Addresses run-time problems exhibited applications that pass
	  fixed size types, such as fixed size structures, as parameters
	  or return values.

Thu Feb 24 11:12:12 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_arg_traits.cpp (visit_attribute):
